# cim_compile

./: .gitignore  AGENTS.md  Cargo.toml  LINKS.md  NOTES.md  README.md  build.rs  lefthook.yml  rust-toolchain.toml
.github/workflows/: ci.yml
data/: generate_model.py
proto/: onnx_minimal.proto3
python/cim_compile_aihwkit/: __init__.py  runner.py  smollm2_runner.py
python/cim_compile_memtorch/: __init__.py  runner.py
src/: aihwkit.rs  backend.rs  cim.rs  frontend.rs  hardware.rs  ir.rs  lib.rs  lowering.rs  main.rs  mapping.rs  memtorch.rs  middle.rs
src/backend/: optimizer.rs
src/rv32i/: mod.rs  optimizer.rs
tests/: cim.rs  cli.rs  full.rs  generate_onnx_fixtures.py  golden.rs
