[package]
name = "cim_compile"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Toy MLIR-style CiM compiler that lowers ONNX projections to a MemTorch simulation path"
license = "MIT"
repository = "https://github.com/nealpro/cim_compile"

[dependencies]
clap = { version = "4", features = ["derive"] }
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3"
